--- a/form-modules/package.json
+++ b/form-modules/package.json
@@ -5,9 +5,10 @@
   "main": "form-modules/modules/FormManager.js",
   "scripts": {
     "dev": "webpack --mode=development --watch",
-    "build": "webpack --mode=production && npm run build:tailwind",
-    "build:dev": "webpack --mode=development && npm run build:tailwind",
+    "build": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
     "build:style": "npx postcss ./src/styles/form-modules.scss -o ./build/form-modules-style.css",
+    "build:tailwind": "npx tailwindcss -i ./src/styles/tailwind-utilities.css -o ./build/form-modules-tailwind.css --content './examples/**/*.html' --content './src/**/*.js' --minify",
     "build:tailwind-legacy": "npx tailwindcss -i ./src/styles-tailwind/main.css -o ./build/form-modules-tailwind-legacy.css --content './examples/**/*.html' --content './src/**/*.js' --minify",
     "clean": "rimraf build"
   },
