--- a/package.json
+++ b/package.json
@@ -36,5 +36,9 @@
     "webpack"
   ],
   "author": "PUJ",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "jquery": "^3.7.1",
+    "select2": "^4.1.0-rc.0"
+  }
 }
